# WinAPI

./: CMakeLists.txt  Makefile  test.sh
Tests/: CMakeLists.txt
Tests/Threads/: Threads.cpp  ThreadsWindowsApplication.cpp
Windows/: CMakeLists.txt  Locker.cpp  WindowsAPIHander.cpp  WindowsAPIMessage.cpp  WindowsAPIProcess.cpp  WindowsAPIThread.cpp
Windows/Kernel/: WindowsAPIHandle.cpp  WindowsAPIObject.cpp  WindowsAPITable.cpp
Windows/threads/: CMakeLists.txt
Windows/threads/debug_BUILD/: CMakeCache.txt  Makefile  cmake_install.cmake
Windows/threads/debug_BUILD/gtest/: Makefile  cmake_install.cmake
Windows/threads/debug_BUILD/gtest/googletest-src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Windows/threads/debug_BUILD/gtest/googletest-src/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Windows/threads/debug_BUILD/gtest/googletest-src/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Windows/threads/debug_BUILD/libstack/: Makefile  cmake_install.cmake
Windows/threads/debug_BUILD/libstack/tests/: Makefile  cmake_install.cmake  test_stack
Windows/threads/debug_BUILD/libthread/: Makefile  cmake_install.cmake
Windows/threads/debug_BUILD/testBuilder/: Makefile  cmake_install.cmake
Windows/threads/libstack/include/stack/: stack.h
Windows/threads/libstack/src/: new.cpp
Windows/threads/libthread/: CMakeLists.txt
Windows/threads/libthread/include/thread/internal/: ExecutionManager.h
Windows/threads/libthread/src/: ExecutionManager.cpp
Windows/threads/libthread/tests/: compile.sh  single_thread
Windows/threads/libthread_safe/: CMakeLists.txt
Windows/threads/libthread_safe/debug_BUILD/: CMakeCache.txt  Makefile  cmake_install.cmake
Windows/threads/libthread_safe/debug_BUILD/tests/: Makefile  cmake_install.cmake
Windows/threads/libthread_safe/tests/: CMakeLists.txt
Windows/threads/libthread_safe/tests/debug_BUILD/: CMakeCache.txt  Makefile  cmake_install.cmake
debug/: CMakeCache.txt  Makefile  cmake_install.cmake
debug/Tests/: Makefile  Threads  cmake_install.cmake
debug/Windows/: Makefile  cmake_install.cmake
include/Windows/: Locker.h  WindowsAPIDefinitions.h  WindowsAPIProcess.h  WindowsAPIThread.h
release/: CMakeCache.txt  Makefile  cmake_install.cmake
release/Tests/: Makefile  Threads  cmake_install.cmake
release/Windows/: Makefile  (+1 more)
(+54 files in other folders)
